Thu Jun  6 00:04:38 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (all-windows): Don't pass $(LIBCMD) on the command
		line.  It's set in the windows.in prologue for all Makefiles anyway.

Thu Jun  6 00:03:05 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (MAC_SUBDIRS): Include sha in the list of
		subdirectories for the Macintosh

Mon May 20 10:59:23 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* Makefile.in (libcrypto.$(STEXT): deal with new improved
		libupdate

Sat May 18 13:34:01 1996  Ezra Peisach  (epeisach@paris)

	* des3_sha.c: Add static keywords in function declarartions to
		match earlier declarations. 

Tue May 14 15:14:20 1996  Richard Basch  <basch@lehman.com>

	* cryptoconf.c:
		replaced sha-des3 cksum with hmac-sha

	* des_crc.c des_md5.c:
		set the length field of the cksum structure.

	* des3_sha.c:
		Increase the confounder length to 24 bytes.
		Set the length of the cksum structure.

Fri May 10 01:34:46 1996  Richard Basch  <basch@lehman.com>

	* configure.in cryptoconf.c des3_sha.c:
	Support enctype-des3-sha, cksum-sha, cksum-sha-des3

	* Removed des3_md5.c (and all des3-md5 support).

Tue Apr 30 00:38:14 1996  Ken Raeburn  <raeburn@cygnus.com>

	* Makefile.in (libcrypto.$(STEXT)): Remove before creating.

Thu May  2 18:48:35 1996  Richard Basch  <basch@lehman.com>

	* des3_md5.c des3_raw.c: use the new common random routines for
		des & des3 (the old des3 routines have been removed)

Sat Mar 30 22:52:46 1996  Theodore Y. Ts'o  <tytso@dcl>

	* cryptoconf.c: Fixed comments describing the various checksum
	        types.  (Added numbers, and fixed a mistake in a
		description of an undefined checksum type.)

Thu Mar 28 09:49:08 1996  Richard Basch  <basch@lehman.com>

	* cryptoconf.c: Added support for CKSUMTYPE_RSA_MD5_DES3 and
		ENCTYPE_DES3_CBC_RAW

	* des3_md5.c: Abstraction correction: use sizeof(mit_des3_cblock)

	* configure.in:
		Cosmetic renaming of des-cbc-raw configuration vars.
		Added support for des3-cbc-raw.
